plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상
	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
	implementation 'org.hibernate.validator:hibernate-validator:7.0.5.Final' // Hibernate Validator 추가
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2' // Jakarta Validation API
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' //swagger


	// queryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

clean {
	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += [
			'--add-opens',
			'java.base/java.lang=ALL-UNNAMED',
			'--add-opens',
			'java.base/java.util=ALL-UNNAMED'
	]
}


sourceSets {
	main {
		java {
			srcDirs = ['src/main/java', 'src/main/resources', 'src/main/generated']
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// Querydsl 설정부
def generated = 'src/main/generated'

querydsl {
	jpa = true
	querydslSourcesDir = generated
}
sourceSets {
	main.java.srcDir generated
}

compileQuerydsl{
	options.annotationProcessorPath = configurations.querydsl
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	querydsl.extendsFrom compileClasspath
}